hello world rendered!

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -31,9 +31,9 @@ html, body {
 
 h1, h2, h3 {
 
-    /* &::before { */
-    /*     content: "# "; */
-    /* } */
+    &::before {
+        content: "# ";
+    }
 
 }
 
